--- a/templates/web.html
+++ b/templates/web.html
@@ -110,7 +110,7 @@
 
   <div class="header-container">
     <div class="logo-container">
-      <img src="image\logo.png" alt="Sikh Logo">
+      <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Sikh Logo">
     </div>
     <div class="overlay">
       <h1>Welcome to Sikh Heritage</h1>
