--- a/templates/web.html
+++ b/templates/web.html
@@ -110,7 +110,7 @@
 
   <div class="header-container">
     <div class="logo-container">
-      <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Sikh Logo">
+      <img src="image\logo.png" alt="Sikh Logo">
     </div>
     <div class="overlay">
       <h1>Welcome to Sikh Heritage</h1>
@@ -122,51 +122,61 @@
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Mural_painting_of_Guru_Nanak_from_Gurdwara_Baba_Atal_Rai.jpg/500px-Mural_painting_of_Guru_Nanak_from_Gurdwara_Baba_Atal_Rai.jpg" alt="Guru Nanak Dev Ji">
       <h3>Guru Nanak Dev Ji</h3>
+      <p>(Pehle Sikh Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Nanak" >Read Biography</a>
     </div>
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Guru_Angad_miniature_painting.jpg/500px-Guru_Angad_miniature_painting.jpg" alt="Guru Angad Dev Ji">
       <h3>Guru Angad Dev Ji</h3>
+      <p>(Dooje Sikh Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Angad" >Read Biography</a>
     </div>
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/18th_century_painting_of_Guru_Amar_Das.jpg/500px-18th_century_painting_of_Guru_Amar_Das.jpg" alt="Guru Amar Das Ji">
       <h3>Guru Amar Das Ji</h3>
+      <p>(Teeje Sikh Guru Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Amar_Das" >Read Biography</a>
     </div>
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Guru_Ram_Das_miniature_painting.jpg/500px-Guru_Ram_Das_miniature_painting.jpg" alt="Guru Ram Das Ji">
       <h3>Guru Ram Das Ji</h3>
+      <p>(Chauthe Sikh Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Ram_Das" >Read Biography</a>
     </div>
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Guru_Arjan.jpg" alt="Guru Arjan Dev Ji">
       <h3>Guru Arjan Dev Ji</h3>
+      <p>(Panjve Sikh Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Arjan" >Read Biography</a>
     </div>
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Contemporary_painting_of_the_sixth_Sikh_guru%2C_Guru_Hargobind._Provincial_Mughal_school%2C_Deccan%2C_mid-17th_century.jpg/500px-Contemporary_painting_of_the_sixth_Sikh_guru%2C_Guru_Hargobind._Provincial_Mughal_school%2C_Deccan%2C_mid-17th_century.jpg" alt="Guru Hargobind Ji">
       <h3>Guru Hargobind Ji</h3>
+      <p>(Chhevein Sikh Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Hargobind" >Read Biography</a>
     </div>
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Guru_Har_Rai%2C_Guler-Basohli_painting.jpg/500px-Guru_Har_Rai%2C_Guler-Basohli_painting.jpg" alt="Guru Har Rai Ji">
       <h3>Guru Har Rai Ji</h3>
+      <p>(Satvein Sikh Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Har_Rai" >Read Biography</a>
     </div>
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Painting_of_the_eighth_Guru_of_the_Sikhs%2C_Guru_Har_Krishan%2C_seated_on_a_platform_and_leaning_against_a_bolster_with_a_red-coloured_backdrop.jpg/500px-Painting_of_the_eighth_Guru_of_the_Sikhs%2C_Guru_Har_Krishan%2C_seated_on_a_platform_and_leaning_against_a_bolster_with_a_red-coloured_backdrop.jpg" alt="Guru Har Krishan Ji">
       <h3>Guru Har Krishan Ji</h3>
+      <p>(Athvein Sikh Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Har_Krishan" >Read Biography</a>
     </div>
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Contemporary_painting_of_Guru_Tegh_Bahadur_by_Ahsan%2C_ca.1667%E2%80%9368_%28detail%29.jpg/960px-Contemporary_painting_of_Guru_Tegh_Bahadur_by_Ahsan%2C_ca.1667%E2%80%9368_%28detail%29.jpg" alt="Guru Tegh Bahadur Ji">
       <h3>Guru Tegh Bahadur Ji</h3>
+      <p>(Nauvein Sikh Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Tegh_Bahadur" >Read Biography</a>
     </div>
     <div class="guru-card">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Guru_Gobind_Singh_contemporary_painting.jpg/500px-Guru_Gobind_Singh_contemporary_painting.jpg" alt="Guru Gobind Singh Ji">
       <h3>Guru Gobind Singh Ji</h3>
+      <p>(Dasvein Sikh Guru)</p>
       <a href="https://en.wikipedia.org/wiki/Guru_Gobind_Singh" >Read Biography</a>
     </div>
   </div>
